--- a/app/src/main/res/layout/city_list_row.xml
+++ b/app/src/main/res/layout/city_list_row.xml
@@ -33,8 +33,8 @@
         app:layout_constraintTop_toBottomOf="@id/text_view_name"
         android:layout_marginStart="16dp"
         android:text="City Location"
-        android:textColor="#000"
-        android:textStyle="bold"/>
+        android:textColor="#000"/>
+
 
     <TextView
         android:id="@+id/text_view_period"
