--- a/app/src/main/res/layout/fragment_city_details.xml
+++ b/app/src/main/res/layout/fragment_city_details.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/label_name"
+        android:textColor="#000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view_name_label" />
 
@@ -50,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/label_location"
+        android:textColor="#000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_view_location_label" />
     <TextView
@@ -67,6 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/label_period"
+        android:textColor="#000"
         app:layout_constraintTop_toBottomOf="@id/text_view_period_label"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp"/>
